--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -36,7 +36,7 @@ h3{
   width: 500px;
   height: 500px;
   margin-left: -150px;
-  background-color: grey;
+  background-color: rgb(58, 133, 219);
   border-radius: 5%;
   border: 2px solid;
 }
@@ -83,9 +83,11 @@ h4{
 .pdf:before{
     content : "\00261E";
     font-size: 1.5rem;
+    color: gold;
   }
 
 .github:before{
     content : "\00261E";
     font-size: 1.5rem;
+    color: gold;
   }
