--- a/src/assets/modal.css
+++ b/src/assets/modal.css
@@ -4,10 +4,14 @@
     justify-content: center;
 }
 
-#modal img{
+#shadow-img img{
     width: 200px;
     border-radius: 5%;
     cursor: pointer;
+}
+
+#shadow-img:hover img{
+    filter: drop-shadow(12px 12px 5px gold);
 }
 
 h3{
@@ -69,7 +73,7 @@ h4{
 }
 
 .modal p{
-    padding: 40px 20px 0 20px;
+    padding: 20px 20px 0 20px;
     color: whitesmoke;
     text-align: center;
 }
@@ -89,5 +93,23 @@ h4{
 .github:before{
     content : "\00261E";
     font-size: 1.5rem;
+    color: gold;
+  }
+
+  .modal img{
+    width: 50px;
+    height: 50px;
+    border-radius: 5%;
+  }
+
+  .modal-logo{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 5px;
+  }
+
+  .modal a:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
     color: gold;
   }
